2023-11-24T08:16:23Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6978364316 # 2109
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-24
* notice: last 14d: unq all: 39 68
* notice: prev accum: outdated-unq outdated-all / unq all: 1371 3286 / 1419 3353
* notice: next accum: outdated-unq outdated-all / unq all: 1371 3286 / 1421 3355
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -1 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2023-11-10 2023-11-24]

2023-11-24T00:58:47Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6975613219 # 2108
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-24
* notice: last 14d: unq all: 38 67
* notice: prev accum: outdated-unq outdated-all / unq all: 1370 3284 / 1413 3342
* notice: next accum: outdated-unq outdated-all / unq all: 1371 3286 / 1419 3353
* notice: prev exec diff / last date diff / accum: unq all: +6 +11 -0 -0 / +25 +37 -0 -0 / 25 37
* notice: removed / changed dates: [2023-11-09] / [2023-11-23]

2023-11-23T16:16:55Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6972148708 # 2107
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-23
* notice: last 14d: unq all: 33 57
* notice: prev accum: outdated-unq outdated-all / unq all: 1370 3284 / 1411 3339
* notice: next accum: outdated-unq outdated-all / unq all: 1370 3284 / 1413 3342
* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -0 / +19 +26 -0 -0 / 19 26
* notice: removed / changed dates: [] / [2023-11-23]

2023-11-23T08:16:35Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6967116274 # 2106