@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-11-24T08:16:23Z",
-  "count_outdated" : 3286,
-  "uniques_outdated" : 1371,
-  "count" : 3355,
+  "timestamp" : "2023-11-25T00:58:02Z",
+  "count_outdated" : 3288,
+  "uniques_outdated" : 1372,
+  "count" : 3356,
   "uniques" : 1421,
   "clones" : [
-    {
-      "timestamp": "2023-11-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-11-11T00:00:00Z",
       "count": 1,
@@ -88,9 +79,9 @@
     },
     {
       "timestamp": "2023-11-24T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
+      "count_decinc": [ 0, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
