@@ -3,11 +3,6 @@
   "uniques": 39,
   "clones": [
     {
-      "timestamp": "2023-11-10T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-11-11T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -49,7 +44,7 @@
     },
     {
       "timestamp": "2023-11-24T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 2
     }
   ]
